Fix accessibility color issue & add some oklch colors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,8 @@ fieldset {
 }
 
 fieldset > legend {
-  color: yellowgreen;
+  color: var(--violet-fallback);
+  color: var(--violet);
 }
 
 footer {
@@ -18,7 +19,8 @@ footer > a {
 }
 
 footer > a:hover {
-  color: red;
+  color: var(--red-fallback);
+  color: var(--red);
 }
 
 header {
